fixing structure project

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -3,7 +3,7 @@ import { getCollection } from "astro:content"
 import PageLayout from "@layouts/PageLayout.astro"
 import TopLayout from "@layouts/TopLayout.astro"
 import BottomLayout from "@layouts/BottomLayout.astro"
-import Blog from "@components/Blog"
+import Blog from "@components/features/Blog"
 import { BLOG } from "@consts"
 
 // Get all non-draft blog posts and sort by date (newest first)
