--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -3,7 +3,7 @@ import { SITE, LINKS } from "@consts"
 import { cn } from "@lib/utils"
 const { pathname } = Astro.url
 const subpath = pathname.match(/[^/]+/g)
-import Container from "@components/Container.astro"
+import Container from "@components/ui/Container.astro"
 ---
 
 <header id="header" class="fixed top-0 w-full h-16 z-50 ">
