--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -1,9 +1,9 @@
 ---
 import "@styles/global.css"
-import BaseHead from "@components/BaseHead.astro"
-import Header from "@components/Header.astro"
-import Footer from "@components/Footer.astro"
-import Drawer from "@components/Drawer.astro"
+import BaseHead from "@components/layout/BaseHead.astro"
+import Header from "@components/layout/Header.astro"
+import Footer from "@components/layout/Footer.astro"
+import Drawer from "@components/layout/Drawer.astro"
 const { title, description } = Astro.props
 import { SITE } from "@consts"
 ---
