--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -4,10 +4,9 @@ import { cn } from "@lib/utils";
 const { pathname } = Astro.url;
 const subpath = pathname.match(/[^/]+/g);
 import Container from "@components/ui/Container.astro";
-
-// Filter LINKS untuk hanya Blog, Education, dan Projects
+const allowedLinkTexts = ["Home", "Blog", "Education", "Projects", "Work"];
 const filteredLinks = LINKS.filter((link) =>
-  ["Blog", "Education", "Projects"].includes(link.TEXT)
+  allowedLinkTexts.includes(link.TEXT)
 );
 ---
 
