--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -1,11 +1,12 @@
 ---
-import "@styles/global.css"
-import BaseHead from "@components/layout/BaseHead.astro"
-import Header from "@components/layout/Header.astro"
-import Footer from "@components/layout/Footer.astro"
-import Drawer from "@components/layout/Drawer.astro"
-const { title, description } = Astro.props
-import { SITE } from "@consts"
+import "@styles/global.css";
+import BaseHead from "@components/layout/BaseHead.astro";
+import Header from "@components/layout/Header.astro";
+import Footer from "@components/layout/Footer.astro";
+import Drawer from "@components/layout/Drawer.astro";
+import SpeedInsights from "@vercel/speed-insights/astro";
+const { title, description } = Astro.props;
+import { SITE } from "@consts";
 ---
 
 <!doctype html>
@@ -20,5 +21,6 @@ import { SITE } from "@consts"
       <slot />
     </main>
     <Footer />
+    <SpeedInsights />
   </body>
 </html>
