--- a/src/components/sections/HeroSection.astro
+++ b/src/components/sections/HeroSection.astro
@@ -52,7 +52,6 @@
           <!-- Fixed Resume Download Button -->
           <a
             href="/resume.pdf"
-            download="Rizky_Eka_Haryadi_Resume.pdf"
             target="_blank"
             rel="noopener noreferrer"
             class="py-3 px-6 rounded-lg text-sm md:text-base border border-black/25 dark:border-white/25 hover:bg-black/5 hover:dark:bg-white/15 transition-colors font-medium inline-flex items-center gap-2">
@@ -65,10 +64,15 @@
                 stroke-linecap="round"
                 stroke-linejoin="round"
                 stroke-width="2"
-                d="M12 10v6m0 0l-3-3m3 3l3-3M3 17V7a2 2 0 012-2h6l2 2h6a2 2 0 012 2v10a2 2 0 01-2 2H5a2 2 0 01-2-2z"
+                d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path>
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"
               ></path>
             </svg>
-            Download CV
+            View CV
           </a>
         </div>
       </div>
